--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 /* Rectangle Container Starts Form Here  */
 .rectangle-container {
   width: 1920px;
-  height: 4867px;
+  height: 1539px;
   background-color: #fff;
 }
 .rectangle-title {
@@ -135,11 +135,73 @@ img {
   text-decoration-line: underline;
   margin-top: 32px;
 }
-/* Header Banner Start Form here  */
-.header-banner-container {
+
+/* service-container starts form here  */
+.service-container{
+
+background: rgba(39, 39, 39, 0.05);
+display: flex;
+border-radius: 8px;
+margin-top: 195px;
+margin-left: 240px;
+margin-right: 240px;
+
+}
+
+
+.services{
   width: 1440px;
   height: 320px;
-  flex-shrink: 0;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.ser-img{
+  width: 88px;
+  height: 88px;
+  margin-bottom: 24px;
+  margin-top: 86px;
+
+}
+.ser-title{
+  color: rgba(39, 39, 39, 0.8);
+text-align: center;
+font-size: 24px;
+font-weight: 600;
+line-height: 35px;
+
+}
+/* banner container starts from here  */
+.banner-container{
   border-radius: 8px;
-  background: rgba(39, 39, 39, 0.05);
+background: rgba(229, 84, 115, 0.05);
+width: 1922px;
+height: 620px;
+justify-content: center;
+align-items: center;
+text-align: center;
+
+margin-top: -128px;
+display: flex;
+gap: 215px;
+
+}
+.banner-container-left h1{
+  color: #272727;
+font-size: 40px;
+font-weight: 800;
+
+}
+.banner-container-left p{
+  color: rgba(39, 39, 39, 0.60);
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+margin-top: 24px;
+}
+.banner-container-right img{
+  width: 318px;
+height: 420px;
+margin-top: -100px;
+
 }
