--- a/style.css
+++ b/style.css
@@ -258,3 +258,24 @@ img {
   padding-left: 22px;
   margin-top: 30px;
 }
+.footer-container {
+  width: 1920px;
+  height: 449px;
+  background: #111010;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.footer-container h1 {
+  color: #e55473;
+  font-size: 48px;
+  font-weight: 800;
+  padding-top: 128px;
+}
+.footer-container p {
+  margin-top: 24px;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
